# dify

.github/workflows/: legal-engine-api.yml
.windsurf/workflows/: legal-ai-staging-smoke.md
api/: pyproject.toml
docs/legal-ai/: .env.example  README.md  api-contracts.openapi.yml  architecture.md  cost-and-vendor-strategy.md  data-model.sql  deployment-checklist.md  dify-chat-answer.yml  dify-workflow.md  evaluation-plan.md  implementation-guide.md  ingestion-plan.md  mvp-backlog.md  n8n-workflows.md  observability-and-audit.md  operating-model.md  product-brief.md  production-runbook.md  prompts.md  retrieval-validation-policy.md  risk-register.md  roadmap.md  security-privacy-compliance.md  source-policy.yml
docs/legal-ai/adr/: 0001-paid-mvp-with-replaceable-adapters.md  0002-source-policy-in-code.md  0004-ui-strategy.md  (+1 more)
legal-engine-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
legal-engine-api/app/: audit.py  chunking.py  config.py  corpus.py  database_ops.py  demo.py  engine.py  evaluate.py  evaluation.py  feedback_triage.py  ingestion.py  ingestion_jobs.py  main.py  n8n_workflows.py  pilot_readiness.py  pipeline.py  provider_readiness.py  readiness.py  remote_sources.py  repository.py  rerank.py  review_queue.py  schemas.py  seed.py  smoke.py  source_policy.py  vector_index.py
legal-engine-api/app/api/: routes.py
legal-engine-api/app/migrations/: 0002_document_temporal_metadata.sql  0003_answer_feedback_category.sql  0004_chunk_vector_ids.sql  0005_answer_prompt_versions.sql
legal-engine-api/tests/: test_chunking.py  test_contracts.py  test_corpus.py  test_database_ops.py  test_demo.py  test_dify_workflow.py  test_engine.py  test_evaluation.py  test_feedback_triage.py  test_ingestion.py  test_ingestion_jobs.py  test_n8n_workflows.py  test_pilot_readiness.py  test_pipeline.py  test_provider_readiness.py  test_readiness.py  test_retrieval.py  test_review_queue.py  test_routes.py  test_smoke.py  test_source_policy.py
(+13 files in other folders)
