[project]
name = "legal-engine-api"
version = "0.1.0"
description = "Source-grounded legal evidence engine for Legal AI Chat."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.scripts]
legal-demo = "app.demo:main"
legal-db-backup = "app.database_ops:backup_main"
legal-db-migrate = "app.database_ops:migrate_main"
legal-db-restore = "app.database_ops:restore_main"
legal-eval = "app.evaluate:main"
legal-ingestion-jobs = "app.ingestion_jobs:main"
legal-n8n-validate = "app.n8n_workflows:main"
legal-readiness = "app.readiness:main"
legal-review-queue = "app.review_queue:main"
legal-seed = "app.seed:main"
legal-smoke = "app.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
